--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,53 @@
- 
+html {
+	height: 100%;
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+	scroll-behavior: smooth;
+}
+
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
+body {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding: 0;
+	font-family: 'Arial', 'sans-serif';
+	font-size: 18px;
+	line-height: 1.5;
+	color: #48494d;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+	object-fit: cover;
+}
+
+main {
+	flex-grow: 1;
+}
+
+/* Container */
+
+.container {
+	max-width: 1150px;
+	margin: 0 auto;
+	padding: 0 20px;
+}
