--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -8,5 +8,11 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background: #cccccc;
+}
+.d-none {
+	display: none;
 }
